--- a/app/search/templates/search/results.html
+++ b/app/search/templates/search/results.html
@@ -7,7 +7,12 @@
 <title>Results</title>
 <body>
   <div class="container">
-    <b>Result:</b> {{message}}
+    <div class="panel panel-info">
+      <div class = "panel-heading">
+      <h3 class="panel-title">Essential Ingredients</h3>
+      </div>
+      <div class="panel-body">{{message}}</div>
+  </div>
   </div>
 </body>
 {% endblock %}
