--- a/app/search/templates/search/results.html
+++ b/app/search/templates/search/results.html
@@ -3,10 +3,12 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "bootstrap/fixes.html" as fixes %}
 {% block content %}
-<!doctype html>
 <title>Results</title>
 <body>
   <div class="container">
+    <div class="page-header">
+      <h1>{{title}} <small>based on {{num_matches}} recipes</small></h>
+    </div>
     <div class="panel panel-info">
       <div class = "panel-heading">
       <h3 class="panel-title">Essential Ingredients</h3>
