--- a/app/search/templates/search/search.html
+++ b/app/search/templates/search/search.html
@@ -5,8 +5,8 @@
 {% block content %}
 <body>
   <div class="container">
-    <h1>What makes goulash goulash? </h1>
-    <p class="lead">This app explores recipes from a variety of sources in order to discover the essential character of a dish.</p>
+    <h1>Goulash <small>Summarizer of recipes</small></h1>
+    <p class="lead">There are hundreds if not thousands of recipes for goulash on the internet. But the question remains, what makes goulash goulash? Here's a tool that compares recipes from across the internet in order to discover the essential character of a dish.</p>
     <form class="form form-horizontal" method=post action="/search">
       <dl>
         {{ render_field(form.recipe) }}
